--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-07  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/migrating-GtkIconView.sgml: Corrections.  
+	(#309718, Tim-Philipp Müller)
+	
 2005-07-06  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk/tmpl/general.sgml: Point to GdkEventGrabBroken
