Add some additional docs on precision here too. (#309238, Steve Chaplin)
2005-07-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkhscale.c (gtk_hscale_new_with_range):
	(gtk_vscale_new_with_range): Add some additional docs on
	precision here too.  (#309238, Steve Chaplin)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-07-07  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkhscale.c (gtk_hscale_new_with_range): 
+	(gtk_vscale_new_with_range): Add some additional docs on 
+	precision here too.  (#309238, Steve Chaplin)
+
+2005-07-07  Matthias Clasen  <mclasen@redhat.com>
+
 	Implement Drag-and-Drop to the file list.  (#145121, Sven Neumann)
 	
 	* gtk/gtkfilechooserdefault.c (file_list_drag_data_received_cb) 
