--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-08  Tor Lillqvist  <tml@novell.com>
+
+	* gtk/gtkfilesel.c: Use g_get_host_name().
+
 2005-07-07  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Add -DHPPEX -DSHMLINK to CFLAGS for HP-UX.  
