--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-08  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/gdk-docs.sgml: Fix the "new in 2.8" index.
+
+	* gdk-pixbuf/gdk-pixbuf.sgml: Add the "new in 2.8" index.
+
 2005-07-07  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/migrating-GtkIconView.sgml: Corrections.  
