--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@
 	mark new nodes as valid in addition to setting the height.
 
 2005-07-08  Matthias Clasen  <mclasen@redhat.com>
+
+	* configure.in: Bump version
 	
 	* === Released 2.7.2 ===
 
