--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-08  Marcel Telka  <marcel@telka.sk>
+
+	* sk.po: Updated Slovak translation.
+
 2005-07-08  Matthias Clasen  <mclasen@redhat.com>
 	
 	* === Released 2.7.2 ===
