--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,14 @@
+2005-07-09  Tor Lillqvist  <tml@novell.com>
+
+	* Makefile.am: Don't use the scripts in build/win32 to compile the
+	rc file into a resource object file. (This means we lose the
+	build number increment magic, but I doubt it was that useful
+	anyway.) Instead use windres directly. To pass the normal .o file
+	produced by windres through libtool, which would want a .lo file,
+	pass it directly to the linker using a -Wl option.
+
+	* gdk_pixbuf.rc.in: Replace BUILDNUMBER with 0.
+
 2005-07-08  Matthias Clasen  <mclasen@redhat.com>
 	
 	* === Released 2.7.2 ===
