--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-09  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2005-07-08  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation.
