--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-10  Kristian Rietveld  <kris@gtk.org>
+
+	* gtk/gtktreeview.c (gtk_tree_view_move_cursor_page_up_down): rework
+	function to make page up/down behave the same as in GtkTextView.
+	(Fixes #101220, Owen Taylor).
+
 2005-07-09  Kristian Rietveld  <kris@gtk.org>
 
 	Fix #305737, patch from Tomislav Jonjic. This makes the
