--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-07-10  Kristian Rietveld  <kris@gtk.org>
 
+	* gtk/gtktreeview.c (gtk_tree_view_move_cursor_page_up_down): remove
+	unneeded check for negative window_y.
+
+2005-07-10  Kristian Rietveld  <kris@gtk.org>
+
 	* gtk/gtktreeview.c (gtk_tree_view_search_key_press_event): also move
 	to the next match when ctrl+g is pressed. (#156657, Matt T. Proud).
 
