Updated Serbian translation.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-10  Danilo Å egan  <danilo@gnome.org>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2005-07-10  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
@@ -85,7 +89,7 @@
 
 2005-06-13  Terance Sola  <terance@yse.net>
 
-	* nb.po: Updated Norwegian Bokmål translation.
+	* nb.po: Updated Norwegian Bokmal translation.
 	* no.po: Same.
 
 2005-06-12  Miloslav Trmac  <mitr@volny.cz>
