--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-12  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2005-07-10  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
